clipping fix again and color change for contact form on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3731,7 +3731,7 @@ input, select, textarea {
 			}
 
 		#banner:after {
-			/* pointer-events: none;
+			pointer-events: none;
 			-moz-transition: opacity 3s ease-in-out;
 			-webkit-transition: opacity 3s ease-in-out;
 			-ms-transition: opacity 3s ease-in-out;
@@ -3748,7 +3748,7 @@ input, select, textarea {
 			position: absolute;
 			left: 0;
 			top: 0;
-			opacity: 0; */
+			opacity: 0;
 		}
 
 		@media screen and (max-width: 736px) {
@@ -4060,8 +4060,9 @@ input, select, textarea {
 	}
 
 	@media screen and (max-width:736px) {
-		#bgvideo {
-			position: relative;
+		#bgVideo {
+			position: absolute;
+			
 		}
 	}
 
@@ -4323,6 +4324,12 @@ input, select, textarea {
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+	}
+
+	@media screen and (max-width:736px){
+		#cta {
+			background-color: rgba(124, 118, 118, 0.5);
+		}
 	}
 
 
